[gd_scene load_steps=3 format=3 uid="uid://qf0pbyncbmeh"]

[ext_resource type="Script" path="res://src/UI/menu.gd" id="1_bx2oi"]
[ext_resource type="Theme" uid="uid://de4coo0f5fs5r" path="res://src/UI/main_ui_theme.tres" id="1_ljogi"]

[node name="Menu" type="Panel"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ljogi")
script = ExtResource("1_bx2oi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -185.0
offset_right = 230.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopVBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="PanelContainer/TopVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "Title "
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TopVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="CreditsText" type="RichTextLabel" parent="PanelContainer/TopVBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[center]
Designer
[b]JustSomeDesigner[/b]
Designer
[b]JustSomeDesigner[/b]
Designer
[b]JustSomeDesigner[/b]
[/center]"
fit_content = true
scroll_active = false

[node name="PlayResumeButton" type="Button" parent="PanelContainer/TopVBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../QuitButton")
text = "Play"

[node name="CreditsButton" type="Button" parent="PanelContainer/TopVBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../PlayResumeButton")
text = "Credits"

[node name="QuitButton" type="Button" parent="PanelContainer/TopVBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_next = NodePath("../PlayResumeButton")
focus_previous = NodePath("../CreditsButton")
text = "Quit"

[node name="GoBackButton" type="Button" parent="PanelContainer/TopVBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "Go Back"

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/TopVBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/TopVBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/TopVBoxContainer/VBoxContainer/PlayResumeButton" to="." method="_on_play_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/TopVBoxContainer/VBoxContainer/CreditsButton" to="." method="_show_credits"]
[connection signal="pressed" from="PanelContainer/TopVBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PanelContainer/TopVBoxContainer/VBoxContainer/GoBackButton" to="." method="_close_credits"]
